smashing everything with terrible commits and stashed change conflicts.

--- a/STM32CubeIDE/Daisy Driver 3.ioc
+++ b/STM32CubeIDE/Daisy Driver 3.ioc
@@ -10,10 +10,11 @@ CAD.pinconfig=
 CAD.provider=
 CAN1.BS1=CAN_BS1_1TQ
 CAN1.BS2=CAN_BS2_1TQ
-CAN1.CalculateBaudRate=875000
-CAN1.CalculateTimeBit=1142
-CAN1.CalculateTimeQuantum=380.95238095238096
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2
+CAN1.CalculateBaudRate=499999
+CAN1.CalculateTimeBit=2000
+CAN1.CalculateTimeQuantum=666.6666666666667
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler
+CAN1.Prescaler=28
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
@@ -96,6 +97,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=IPS_COS
@@ -326,9 +328,13 @@ TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Prescaler,Period
-TIM8.Period=655
-TIM8.Prescaler=63
+TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4
+TIM8.Period=999
+TIM8.Prescaler=419
+TIM8.Pulse-PWM\ Generation1\ CH1=0
+TIM8.Pulse-PWM\ Generation2\ CH2=1000
+TIM8.Pulse-PWM\ Generation3\ CH3=1000
+TIM8.Pulse-PWM\ Generation4\ CH4=1000
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 USB_DEVICE.CLASS_NAME_FS=CDC
